# dataqe-framework

./: .gitignore  ARCHITECTURE.md  COMMANDS_QUICK_REFERENCE.txt  CONFIGURATION.md  CONTRIBUTING.md  CREDENTIALS_CLEANUP_IMPLEMENTATION.md  DEPLOYMENT_SUMMARY.txt  DOCUMENTATION_CHECKLIST.txt  ENHANCEMENTS_SUMMARY.md  EXECUTION_METADATA_GUIDE.md  GETTING_STARTED.md  GITHUB_DEPLOYMENT.md  GITHUB_SETUP.md  HTML_REPORT_QUALITY_GUIDE.md  IMPLEMENTATION_PATTERN.md  IMPLEMENTATION_SUMMARY.md  INVALID_TEST_FEATURE.md  KUBERNETES_CREDENTIALS_GUIDE.md  LICENSE  MANIFEST.in  PREPROCESSOR.md  PREPROCESSOR_ERROR_HANDLING.md  QUICK_GITHUB_PUSH.md  QUICK_REFERENCE_HTML_EMAIL.md  QUICK_START.md  README.md  README_FOR_DEPLOYMENT.md  REPLACE_DATASET_FALLBACK.md  SENDING_REPORTS_VIA_EMAIL.md  V0.3.0_IMPLEMENTATION_SUMMARY.md  example_preprocessor_config.yml  example_preprocessor_queries.yml  example_preprocessor_test_script.yml  migration_tests.yml  pyproject.toml
src/dataqe_framework/: __init__.py  cli.py  config.py  config_loader.py  credentials_extractor.py  executor.py  preprocessor.py  reporter.py  validator.py
src/dataqe_framework/comparison/: comparator.py
src/dataqe_framework/connectors/: __init__.py  base_connector.py  bigquery_connector.py  mysql_connector.py
tests/: test_credentials_cleanup.py  test_error_handling.py  test_replace_dataset.py  test_replacement_tracking.py
